<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/g_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:orientation="horizontal"
        android:background="#ffffff"
        >


        <RadioGroup
            android:id="@+id/guide_bar1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="6dp"
            android:orientation="horizontal"
            android:checkedButton="@+id/homepage_bar"
            >
            <RadioButton
                android:id="@+id/homepage_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/homepage"
                android:gravity="center_horizontal"
                android:text="@string/homepage"
                android:onClick="homepage_clicked"

                />

            <RadioButton
                android:id="@+id/dynamic_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/dongtai"
                android:gravity="center_horizontal"
                android:text="@string/dynamic"
                android:onClick="dynamic_clicked_bar"
                />

            <RadioButton
                android:id="@+id/self_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/wode"
                android:gravity="center_horizontal"
                android:text="@string/myself"
                android:onClick="self_clicked"

                />
        </RadioGroup>



    </LinearLayout>





</RelativeLayout>